# Speed-Send

./: .env  Procfile  add_column_is_verified.py  add_column_role.py  annuler_transferts.py  app.py  check_users.py  create_fees_table.py  database.py  delete_user.py  flutterwave_config.py  init_db.py  pyproject.toml  render.yaml  requirements.txt  test connexion ssl.py  test.py  transfert.db  update_passwords.py  update_role.py  users.db
templates/: 429.html  add_currency.html  admin_fees.html  admin_transferts.html  base.html  confirmation_transfert.html  dashboard.html  etat_transfert.html  historique.html  index.html  login.html  pay.html  register.html  secret key automatic.py  send_external.html  send_money.html  transfert_formulaire.html  transfert_reussi.html  transfert_valide.html  verify.html  welcome.html
